--- a/get_value_from_dynamic_form/index.html
+++ b/get_value_from_dynamic_form/index.html
@@ -186,6 +186,12 @@
       });
 
       
+// here obtuvimos el nombre del input de forma dinamica y usamos un selector 
+// You can use the jQuery attribute selector:
+// $('td[name="tcol1"]')   // Matches exactly 'tcol1'
+// $('td[name^="tcol"]' )  // Matches those that begin with 'tcol'
+// $('td[name$="tcol"]' )  // Matches those that end with 'tcol'
+// $('td[name*="tcol"]' )  // Matches those that contain 'tcol'
 
       $(document).ready(function () {
         
