--- a/get_value_from_dynamic_form/index.html
+++ b/get_value_from_dynamic_form/index.html
@@ -66,8 +66,8 @@
             </div>
           </div>
           <div class="col-md-12 p-0">
-            <div class="col-md-12 form_field_outer p-0">
-              <div class="row form_field_outer_row">
+            <div class="col-md-12 form_field_outer p-0" style="background-color: blue;">
+              <div class="row form_field_outer_row" style="background-color:orangered">
                 <div class="form-group col-md-6">
                   <input
                     type="text"
@@ -157,25 +157,26 @@
       });
 
       ///======Clone method
-      // $(document).ready(function(){
-      //     $("body").on("click", ".add_node_btn_frm_field", function (e) {
-      //       console.log("brak"+e);
-      //       var index = $(e.target).closest(".form_field_outer").find(".form_field_outer_row").length + 1;
-      //       var cloned_el = $(e.target).closest(".form_field_outer_row").clone(true);
+      $(document).ready(function(){
+          $("body").on("click", ".add_node_btn_frm_field", function (e) {
+            console.log("brake and tagname:"+e+e.target.nodeName);
+            var index = $(e.target).closest(".form_field_outer").find(".form_field_outer_row").length + 1;
+            console.log("index"+index);
+            var cloned_el = $(e.target).closest(".form_field_outer_row").clone(true);
+            // console.log("tag name"+e.target.tagName);
+            $(e.target).closest(".form_field_outer").last().append(cloned_el).find(".remove_node_btn_frm_field:not(:first)").prop("disabled", false);
 
-      //       $(e.target).closest(".form_field_outer").last().append(cloned_el).find(".remove_node_btn_frm_field:not(:first)").prop("disabled", false);
+            $(e.target).closest(".form_field_outer").find(".remove_node_btn_frm_field").first().prop("disabled", true);
 
-      //       $(e.target).closest(".form_field_outer").find(".remove_node_btn_frm_field").first().prop("disabled", true);
+            //change id
+            $(e.target).closest(".form_field_outer").find(".form_field_outer_row").last().find("input[type='text']").attr("id", "mobileb_no_"+index);
 
-      //       //change id
-      //       $(e.target).closest(".form_field_outer").find(".form_field_outer_row").last().find("input[type='text']").attr("id", "mobileb_no_"+index);
+            $(e.target).closest(".form_field_outer").find(".form_field_outer_row").last().find("select").attr("id", "no_type_"+index);
 
-      //       $(e.target).closest(".form_field_outer").find(".form_field_outer_row").last().find("select").attr("id", "no_type_"+index);
-
-      //       console.log(cloned_el);
-      //       //count++;
-      //     });
-      //  });
+            console.log(cloned_el);
+            //count++;
+          });
+       });
 
       $(document).ready(function () {
         //===== delete the form fieed row
